Fixed navbar padding to overlap with dropdown menu to avoid dropdown disappearing.

--- a/sass/components/header/_header_navigation.scss
+++ b/sass/components/header/_header_navigation.scss
@@ -92,9 +92,10 @@ button.dropdown-toggle {
       }
     }
 
-    // Add padding to all menu items
+
     a {
-      padding: 14px 16px;
+      // Add padding to all menu items
+      padding: 24px 16px;
     }
 
   }
