--- a/style.css
+++ b/style.css
@@ -854,7 +854,7 @@ button.dropdown-toggle {
     padding: 10px 2px 10px 2px;
   }
   .main-navigation a {
-    padding: 14px 16px;
+    padding: 24px 16px;
   }
 }
 .header-image {
@@ -1055,7 +1055,7 @@ button.dropdown-toggle {
     padding: 10px 2px 10px 2px;
   }
   .main-navigation a {
-    padding: 14px 16px;
+    padding: 24px 16px;
   }
 }
 .site {
@@ -1286,7 +1286,7 @@ button.dropdown-toggle {
     padding: 10px 2px 10px 2px;
   }
   .main-navigation a {
-    padding: 14px 16px;
+    padding: 24px 16px;
   }
 }
 .header-image {
@@ -1487,7 +1487,7 @@ button.dropdown-toggle {
     padding: 10px 2px 10px 2px;
   }
   .main-navigation a {
-    padding: 14px 16px;
+    padding: 24px 16px;
   }
 }
 /*--------------------------------------------------------------
